test/valid/58219_sum_array/sum_array.agu
-- Author: 58219, Mariana Costa

let sumArray (arr) : Int[] -> Int =
    let i : Int = 0;
    let sum : Int = 0;
    while i < length(arr) do (
        set sum = sum + arr[i];
        set i = i + 1
    );
    sum

let _ : Unit =
    let numbers : Int[] = new Int[5 | 0];
    set numbers[0] = 1;
    set numbers[1] = 2;
    set numbers[2] = 3;
    set numbers[3] = 4;
    set numbers[4] = 5;
    print(sumArray(numbers))

