test/invalid-syntax/58219_wrong_array_initialization/wrong_array_initialization.agu
-- Author: 58219, Mariana Costa
-- Syntactic error: wrong array initialization

let _ : Unit =
    let arr : Int[] = new Int[5, 0]